--- a/src/style/Manager_vehicle_add.module.css
+++ b/src/style/Manager_vehicle_add.module.css
@@ -2,13 +2,13 @@
   padding: 0;
   margin: 0;
 }
-.vehicle_add_wrap{
+.vehicle_add_wrap {
   /* border: 1px solid #000; */
   width: var(--content-width);
   margin: auto;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
-.vehicle_add_wrap p{
+.vehicle_add_wrap p {
   /* border: 1px solid #000; */
   width: 1150px;
   margin: auto;
@@ -16,17 +16,17 @@
   font-weight: bold;
 }
 /*차량등록 테이블*/
-.add_wrap{
+.add_wrap {
   /* border: 1px solid #000; */
   margin-top: 20px;
 }
-.add_wrap table{
+.add_wrap table {
   border-collapse: separate;
   border-spacing: 0;
   width: 1150px;
   margin: auto;
 }
-.add_wrap th{
+.add_wrap th {
   padding: 6px 15px;
   text-align: center;
 }
@@ -54,29 +54,29 @@
 .add_wrap td:first-child {
   border-left: 1px solid #cdcdcd;
 }
-.add_wrap input[type=text],
-.add_wrap select
-{
+.add_wrap input[type="text"],
+.add_wrap select {
   border: 1px solid #cdcdcd;
- border-radius: 10px;
- height: 30px;
+  border-radius: 10px;
+  height: 30px;
 }
-.add_wrap select{
+.add_wrap select {
   width: 100px;
   text-align: center;
 }
 
 /*등록버튼*/
-.add_button{
+.add_button {
   /* border: 1px solid #000; */
   width: 1150px;
   margin: auto;
   margin-top: 30px;
   text-align: center;
 }
-.add_button input[type=submit]{
+.add_button input[type="submit"] {
   border: 2px solid var(--main-color);
-  background-color: #fff;
+  background-color: var(--main-color);
+  color: #fff;
   padding: 15px 60px;
   border-radius: 10px;
   font-size: 17px;
@@ -84,8 +84,35 @@
   transition: 0.3s;
   cursor: pointer;
 }
-.add_button input[type=submit]:hover{
+.add_button input[type="submit"]:hover {
+  border: 2px solid var(--sub-color);
+  background-color: var(--sub-color);
+  color: #000;
+}
+
+.add_button input[type="button"] {
   border: 2px solid var(--main-color);
-  background-color: var(--main-color);
+  background-color: #fff;
+  color: #000;
+  margin-right: 10px;
+  padding: 15px 50px;
+  border-radius: 10px;
+  font-size: 17px;
+  font-weight: bold;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.add_button input[type="button"]:hover {
+  border: 2px solid #eb0000;
+  background-color: #eb0000;
   color: #fff;
+}
+
+.add_button > div {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.add_wrap input[type="text"] {
+  padding: 0 5px;
 }
