--- a/src/style/Mypage_confirm.module.css
+++ b/src/style/Mypage_confirm.module.css
@@ -22,14 +22,14 @@
 
 /** 타이틀 아래 버튼 디자인 부분 */
 
-.choosebtn {
+/* .choosebtn {
   margin-top: 2%;
   margin-bottom: 3%;
 }
 
 .selectbtn {
   width: 400px;
-  height: 60px;
+  height: 50px;
   background: #f7be16;
   color: black;
   font-size: 18px;
@@ -39,7 +39,7 @@
 
 .leftbtn {
   width: 400px;
-  height: 60px;
+  height: 50px;
   background: #f5f5f5;
   color: black;
   font-size: 18px;
@@ -53,10 +53,10 @@
   font-size: 18px;
   border: none;
   font-weight: 600;
-}
+} */
 
 .pagetopic {
-  font-size: 20px;
+  font-size: 16px;
   color: black;
   font-weight: 600;
 }
@@ -138,7 +138,7 @@
 /* 아코디언 헤더 내용*/
 
 .opennum {
-  font-size: 19px;
+  font-size: 15px;
   font-size: 800;
 }
 
@@ -148,14 +148,14 @@
 }
 
 .opendate {
-  font-size: 19px;
+  font-size: 15px;
   font-size: 800;
 }
 
 .btnstate {
   display: inline-block;
-  width: 120px;
-  height: 50px;
+  width: 110px;
+  height: 40px;
   padding: 10px 20px;
   border-radius: 20px; /* 반원 형태를 만들기 위해 큰 값 사용 */
   background-color: #293462; /* 버튼 배경색 */
@@ -163,7 +163,7 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  font-size: 19px;
+  font-size: 17px;
   font-size: 600;
   transition: background-color 0.3s ease; /* 배경색 전환 효과 */
   border: 0;
@@ -191,7 +191,7 @@
 .opencontent {
   display: flex;
   margin-top: 2%;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 600;
   align-items: center;
   flex-direction: row;
@@ -208,7 +208,7 @@
 .openright {
   width: 48%;
   margin-left: 29rem;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 500;
 }
 
@@ -218,7 +218,7 @@
 
 .costshow {
   margin-top: 12rem;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   display: flex;
   align-items: center;
