--- a/src/style/Manager_member_detail.module.css
+++ b/src/style/Manager_member_detail.module.css
@@ -4,84 +4,106 @@
   /*메인컬러*/
   --main-color: #21325e;
   /*보조컬러*/
-  --sub-color: #f7be16;
+  --sub-color: #f7be112;
   /*보조컬러-뒤에 깔아주는 연한 회색*/
   --back-color: #f5f5f5;
+  /*뒤로가기컬러*/
+  --cancel-color: #eb0000;
 }
 * {
   padding: 0;
   margin: 0;
 }
 .member_detail_wrap {
+  /* border: 1px solid #000; */
   width: var(--content-width);
   margin: auto;
   margin-top: 20px;
-  padding: 5px;
 }
-.detail_header{
+.member_detail_wrap > p {
+  font-size: 20px;
+  font-weight: bold;
 }
+.member_detail_wrap hr {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  border: none;
+  background-color: var(--main-color);
+  height: 3px;
+}
+.detail_header {
+  /* border: 1px solid #000; */
+}
+
 /*버튼*/
-.detail_button{
- text-align: center;
+.detail_button {
+  text-align: left;
 }
-.button_inner{
+.button_inner {
   margin: auto;
   padding: 10px 30px;
   border-radius: 5px;
   cursor: pointer;
 }
-.detail_list{
+.detail_list {
   background-color: var(--main-color);
   border: 2px solid var(--main-color);
   color: #fff;
   margin-right: 10px;
   transition: 0.3s;
 }
-.detail_list:hover{
-  background-color: var(--back-color);
-  border: 2px solid var(--back-color);
-  color: #000;
-}
-.detail_delete{
-  border: none;
-  background-color: var(--back-color);
-  border: 2px solid var(--back-color);
-  color: #000;
-  transition: 0.3s;
-}
-.detail_delete:hover{
+.detail_list:hover {
   background-color: var(--sub-color);
   border: 2px solid var(--sub-color);
   color: #000;
 }
-/*회원정보조회*/
-.detail_wrap{
-  margin-top: 20px;
-  padding: 5px;
+.detail_delete {
+  border: none;
+  background-color: #fff;
+  border: 2px solid var(--main-color);
+  color: #000;
+  transition: 0.3s;
 }
-.input_wrap{
-  width: 500px;
+.detail_delete:hover {
+  background-color: var(--cancel-color);
+  border: 2px solid var(--cancel-color);
+  color: #fff;
+}
+
+/*회원정보조회*/
+.detail_wrap {
+  margin-top: 30px;
+}
+.detail_wrap table {
+  border: 1px solid #dedfe0;
+  width: var(--content-width);
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  border-collapse: separate;
+  border-spacing: 0;
   margin: auto;
   text-align: center;
-  margin-bottom: 10px;
 }
-.input_wrap p{
-  font-weight: bold;
-  text-align: left;
-  margin-bottom: 10px;
-  padding: 2px;
+.detail_wrap table > tr {
+  height: 55px;
 }
-.input_info{
-  display: inline-block;
-  width: 500px;
+.detail_wrap table > tr > td {
+  border-bottom: 1px solid #dedfe0;
+}
+.detail_wrap table > tr > td:first-child {
+  width: 300px;
   background-color: var(--back-color);
-  border-radius: 5px;
-  height: 45px;
-  line-height: 45px;
+  border-right: 1px solid #dedfe0;
+  font-weight: bold;
 }
-.input_info span{
-  padding-left: 20px;
+.detail_wrap table > tr > td:last-child{
+  width: 900px;
 }
-
-
-
+.tdfirst {
+  border-top-left-radius: 12px;
+}
+.tdlast {
+  border-bottom-left-radius: 12px;
+}
