--- a/src/style/Manager_vehicle.module.css
+++ b/src/style/Manager_vehicle.module.css
@@ -12,7 +12,7 @@
   padding: 0;
   margin: 0;
 }
-.vehicle_wrap { 
+.vehicle_wrap {
   /* border: 1px solid #000; */
   width: var(--content-width);
   margin: auto;
@@ -38,28 +38,28 @@
   text-align: left;
   text-align: center;
 }
-.vehicle_wrap th:nth-child(1){
+.vehicle_wrap th:nth-child(1) {
   width: 50px;
 }
-.vehicle_wrap th:nth-child(2){
+.vehicle_wrap th:nth-child(2) {
   width: 200px;
 }
-.vehicle_wrap th:nth-child(3){
+.vehicle_wrap th:nth-child(3) {
   width: 150px;
 }
-.vehicle_wrap th:nth-child(4){
+.vehicle_wrap th:nth-child(4) {
   width: 120px;
 }
-.vehicle_wrap th:nth-child(5){
+.vehicle_wrap th:nth-child(5) {
   width: 130px;
 }
-.vehicle_wrap th:nth-child(6){
+.vehicle_wrap th:nth-child(6) {
   width: 130px;
 }
-.vehicle_wrap th:nth-child(7){
+.vehicle_wrap th:nth-child(7) {
   width: 180px;
 }
-.vehicle_wrap th:nth-child(8){
+.vehicle_wrap th:nth-child(8) {
   width: 90px;
 }
 .vehicle_wrap tr:first-child th:first-child {
@@ -86,35 +86,35 @@
 }
 
 /*삭제 조회 버튼 디자인*/
-.vehicle_wrap button{
+.vehicle_wrap button {
   border: none;
   background-color: unset;
   cursor: pointer;
 }
 .faXmark,
-.faMagnifyingGlass{
+.faMagnifyingGlass {
   color: var(--main-color);
   transition: 0.3s;
 }
-.faXmark{
- font-size: 25px;
+.faXmark {
+  font-size: 25px;
 }
-.faMagnifyingGlass{
+.faMagnifyingGlass {
   font-size: 20px;
 }
 .faXmark:hover,
-.faMagnifyingGlass:hover{
+.faMagnifyingGlass:hover {
   color: var(--sub-color);
 }
- 
+
 /*차량등록 버튼*/
-.vehicle_add{
+.vehicle_add {
   /* border: 1px solid #000; */
   width: 1150px;
   margin: auto;
   margin-top: 30px;
 }
-.vehicle_add button{
+.vehicle_add button {
   border: 2px solid var(--main-color);
   float: right;
   padding: 15px 60px;
@@ -123,8 +123,14 @@
   font-weight: bold;
   transition: 0.3s;
 }
-.vehicle_add button:hover{
+.vehicle_add button:hover {
   border: 2px solid var(--main-color);
   background-color: var(--main-color);
   color: #fff;
+}
+
+.vehicle_wrap > p {
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 600;
 }
