--- a/src/style/Manager_reserv.module.css
+++ b/src/style/Manager_reserv.module.css
@@ -8,7 +8,7 @@
   /*보조컬러-뒤에 깔아주는 연한 회색*/
   --back-color: #f5f5f5;
   /*뒤로가기컬러*/
-  --cancel-color:#eb0000;
+  --cancel-color: #eb0000;
 }
 
 * {
@@ -69,7 +69,7 @@
   justify-content: space-between;
 }
 
-.accordionHeader{
+.accordionHeader {
   border-bottom: 1px solid #dedfe0;
 }
 
@@ -127,6 +127,8 @@
   display: flex;
   justify-content: space-between;
   width: 1200px;
+
+  box-shadow: 0 5px 5px -5px gray;
 }
 
 .leftlist {
