--- a/src/style/Login.module.css
+++ b/src/style/Login.module.css
@@ -7,14 +7,14 @@
 
 .login_body {
   border-radius: 20px;
-  padding: 100px;
+  padding-top: 130px;
   background: #fff;
   text-align: center;
-  position: absolute;
-  top: 50%;
+  /* position: absolute; */
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 3%;
+  transform: translate(-50%, -50%); */
+  margin: 0 auto;
 }
 
 .login_form {
@@ -25,6 +25,8 @@
   height: 500px; /* 원하는 높이 */
   background-color: #f5f5f5;
   border-radius: 10px;
+
+  margin: 0 auto;
 }
 
 .login_body .h3 {
