style: 공지사항관리 페이지 디자인 수정

--- a/src/style/Manager_notice.module.css
+++ b/src/style/Manager_notice.module.css
@@ -12,11 +12,11 @@
   padding: 0;
   margin: 0;
 }
-.notice_wrap { 
+.notice_wrap {
   /* border: 1px solid #000; */
   width: var(--content-width);
   margin: auto;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 /*테이블 디자인*/
@@ -24,7 +24,7 @@
   /* border: 1px solid #000; */
   border-collapse: separate;
   border-spacing: 0;
-  width: 1150px;
+  width: 100%;
   margin: auto;
 }
 .notice_wrap th,
@@ -38,22 +38,22 @@
   text-align: left;
   text-align: center;
 }
-.notice_wrap th:nth-child(1){
+.notice_wrap th:nth-child(1) {
   width: 30px;
 }
-.notice_wrap th:nth-child(2){
+.notice_wrap th:nth-child(2) {
   width: 100px;
 }
-.notice_wrap th:nth-child(3){
+.notice_wrap th:nth-child(3) {
   width: 200px;
 }
-.notice_wrap th:nth-child(4){
+.notice_wrap th:nth-child(4) {
   width: 90px;
 }
-.notice_wrap th:nth-child(5){
+.notice_wrap th:nth-child(5) {
   width: 50px;
 }
-.notice_wrap th:nth-child(6){
+.notice_wrap th:nth-child(6) {
   width: 50px;
 }
 .notice_wrap tr:first-child th:first-child {
@@ -81,35 +81,39 @@
 }
 
 /*수정 삭제 버튼 디자인*/
-.notice_wrap button{
+.notice_wrap button {
   border: none;
   background-color: unset;
   cursor: pointer;
 }
 .faXmark,
-.faPenToSquare{
+.faPenToSquare {
   color: var(--main-color);
-  transition: 0.3s;
+  transition: 0.2s;
 }
-.faXmark{
- font-size: 25px;
+.faXmark {
+  font-size: 25px;
 }
-.faPenToSquare{
+.faPenToSquare {
   font-size: 22px;
 }
-.faXmark:hover,
-.faPenToSquare:hover{
-  color: var(--sub-color);
+.faXmark:hover {
+  color: var(--cancel-color);
+  transition: 0.2s;
 }
- 
+.faPenToSquare:hover {
+  color: var(--sub-color);
+  transition: 0.2s;
+}
+
 /*공지사항등록 버튼*/
-.notice_add{
+.notice_add {
   /* border: 1px solid #000; */
   width: 1150px;
   margin: auto;
   margin-top: 30px;
 }
-.notice_add button{
+.notice_add button {
   border: 2px solid var(--main-color);
   float: right;
   padding: 15px 60px;
@@ -118,7 +122,7 @@
   font-weight: bold;
   transition: 0.3s;
 }
-.notice_add button:hover{
+.notice_add button:hover {
   border: 2px solid var(--main-color);
   background-color: var(--main-color);
   color: #fff;
