style: [관리자페이지-공지사항등록버튼, 이용자평가내역]디자인 수정

--- a/src/style/Manager_notice.module.css
+++ b/src/style/Manager_notice.module.css
@@ -109,7 +109,7 @@
 /*공지사항등록 버튼*/
 .notice_add {
   /* border: 1px solid #000; */
-  width: 1150px;
+  width: var(--content-width);
   margin: auto;
   margin-top: 30px;
 }
