--- a/src/style/Login.module.css
+++ b/src/style/Login.module.css
@@ -125,6 +125,7 @@
   padding: 10px 100px;
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
   /* border-color: #293462; */
+  border: 2px solid #293462;
   background-color: #f5f5f5; /* 버튼 배경색 */
   text-align: center;
   text-decoration: none;
@@ -133,7 +134,9 @@
   margin: auto; /*중앙 정렬*/
 
   width: 100%;
+  font-size: 13px;
   font-weight: bold;
+  color: black;
 }
 
 .login_form .go_join:hover {
