--- a/src/style/Reservation.module.css
+++ b/src/style/Reservation.module.css
@@ -4,46 +4,67 @@
   box-sizing: border-box;
 }
 
-.image {
-  background-color: #f7be16;
-  height: 200px;
-  text-align: center;
-  color: #f5f5f5;
-  line-height: 200px;
-  font-weight: bolder;
-  font-size: 30px;
+.reser_keyimage{
+  background-image: url(../assets/reser_keyimage.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: top center;
+  height: 350px;
+  position: relative;
 }
-
-h1 {
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
+.reser_keyimage>hr{
+  position: absolute;
+  width: 80px;
+  height: 3px;
+  border: none;
+  background-color: var(--sub-color);
+  top: 41%;
+  left: 50%;
+  transform: translatex(-50%);
+  
+}
+.reser_keyimage p {
+  position: absolute;
+  /* border: 1px solid #000; */
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .title_css {
   text-align: center;
   font-size: 17px;
   font-weight: bold;
+  margin-bottom: 15px;
+  margin-top: 20px;
 }
 
 .reservation_info_line {
   width: 1200px;
   margin: 0px auto;
-  border-bottom: 1px solid #21325e;
-  padding-bottom: 10px;
+  border-bottom: 3px solid #21325e;
+  padding-bottom: 14px;
+  margin-top: 50px;
 }
 
 .reservation_info {
   background-color: #21325e;
+  font-size: 18px;
   color: #fff;
-  padding: 10px 30px;
+  padding: 15px 60px;
   text-align: left;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .delivery_address {
+  /* border: 1px solid #000; */
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 1000px;
   margin: 30px auto;
   text-align: center;
 }
@@ -51,7 +72,7 @@ h1 {
 .delivery_day {
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 1000px;
   margin: 30px auto;
   text-align: center;
 }
@@ -59,53 +80,58 @@ h1 {
 .delivery_car_choice {
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 1000px;
   margin: 30px auto;
 }
 
 .delivery_option_choice {
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 1000px;
   margin: 30px auto;
 }
 
 .delivery_memo {
   display: flex;
   justify-content: space-between;
-  width: 700px;
+  width: 1000px;
   margin: 30px auto;
   text-align: center;
 }
 
 .payment {
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: bold;
   text-align: right;
-  width: 700px;
-  margin: 0px auto;
+  width: 1000px;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
 .payment_notice {
   background-color: #f5f5f5;
-  width: 700px;
+  border-top: 3px solid #21325e;
+  width: 1000px;
   margin: 0px auto;
-  padding: 10px 10px;
-  height: 60px;
-  border-top: 1px solid #21325e;
-
+  /* padding: 10px 10px; */
+  height: 100px;
+  line-height: 100px;
+  padding-right: 5px;
   font-size: 20px;
   font-weight: 600;
   text-align: right;
 }
 .payment_notice > span {
+  /* border: 1px solid #000; */
   font-size: 26px;
   color: var(--sub-color);
+  padding-right: 5px;
 }
 
 .pay_btn {
   background-color: #21325e;
   color: #fff;
-  padding: 10px 70px;
+  padding: 20px 80px;
   border-radius: 10px;
   border: none;
   margin: 40px 0px;
@@ -123,18 +149,25 @@ h1 {
 }
 
 .padding_background_1 {
-  padding: 5px 15px;
-  width: 300px;
-  height: 100px;
-  background-color: #f5f5f5;
   border: none;
+  width: 480px;
+  height: 100px;
+  line-height: 100px;
+  background-color: #f5f5f5;
   border-radius: 7px;
   text-align: center;
 }
 
+.select_day{
+  border: 1px solid #dedfe0;
+  padding: 15px 20px;
+  border-radius: 15px;
+  cursor: pointer;
+
+}
 .padding_background_2 {
   padding: 15px 95px;
-  width: 300px;
+  width: 480px;
   height: 50px;
   background-color: #f5f5f5;
   border: none;
@@ -144,22 +177,24 @@ h1 {
 }
 
 .padding_background_3 {
-  padding: 30px 55px;
+  /* border: 1px solid #000; */
+  width: 230px;
+  height: 100px;
+  line-height: 100px;
   background-color: #f5f5f5;
-  border: none;
   border-radius: 7px;
-  text-align: left;
-
+  text-align: center;
   transition: 0.2s;
 }
 
 .padding_background_4 {
-  padding: 15px 60px;
+  /* border: 1px solid #000; */
+  width: 230px;
+  height: 60px;
+  line-height: 60px;
   background-color: #f5f5f5;
-  border: none;
   border-radius: 7px;
   text-align: center;
-
   transition: 0.2s;
 }
 
@@ -169,8 +204,9 @@ h1 {
 }
 
 .padding_background_5 {
+  /* border: 1px solid #000; */
   padding: 5px 15px;
-  width: 300px;
+  width: 480px;
   height: 150px;
   background-color: #f5f5f5;
   border: none;
