--- a/src/style/Customer_faq.module.css
+++ b/src/style/Customer_faq.module.css
@@ -1,3 +1,15 @@
+:root {
+  /*콘텐츠내용 width*/
+  --content-width: 1200px;
+  /*메인컬러*/
+  --main-color: #21325e;
+  /*보조컬러*/
+  --sub-color: #f7be16;
+  /*보조컬러-뒤에 깔아주는 연한 회색*/
+  --back-color: #f5f5f5;
+  /*뒤로가기컬러*/
+  --cancel-color: #eb0000;
+}
 * {
   padding: 0;
   margin: 0;
@@ -6,36 +18,50 @@
 /** 아코디언 형식으로 F&Q 구현한 부분*/
 
 .quescontainer {
+  border: 1px solid #dedfe0;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
   margin-bottom: 3rem;
 }
 
 .faq_container {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .faq_item {
-  border-radius: 5px;
+  /* border: 1px solid #000; */
+  border-bottom: 1px solid #dedfe0;
   overflow: hidden;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
 }
 
 .question {
   background-color: none;
-  padding: 15px;
+  padding: 20px 20px;
   cursor: pointer;
   font-weight: bold;
   /* border-top: 2px solid #293462;
   border-bottom: 1px solid #293462; */
   display: flex;
   justify-content: space-between;
+  transition: 0.3s;
 }
-.faq_item:nth-child(odd) .question,
+
+.question:hover {
+  background-color: var(--back-color);
+}
+/* .faq_item:nth-child(odd) .question,
 .faq_item:nth-child(odd) .answer {
   background: #f5f5f5;
-}
+} */
 
 .answer {
   padding: 3%;
+  background-color: var(--back-color);
 }
 
 .triangle {
@@ -51,19 +77,18 @@
 /** 페이지 하단 number 버튼 디자인 부분 */
 
 .numlist {
-  display: flex;
-  margin: 0 auto;
+  /* border: 1px solid #000; */
+  width: 1200px;
+  margin: auto;
   font-size: 15px;
   font-weight: 500;
   text-align: center;
-  float: left;
-  margin-left: 40%;
 }
 
 .btnnum {
   margin: 0 auto;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   background: #f5f5f5;
   color: black;
   font-size: 15px;
