--- a/src/style/Customer_rating.module.css
+++ b/src/style/Customer_rating.module.css
@@ -1,3 +1,15 @@
+:root {
+  /*콘텐츠내용 width*/
+  --content-width: 1200px;
+  /*메인컬러*/
+  --main-color: #21325e;
+  /*보조컬러*/
+  --sub-color: #f7be16;
+  /*보조컬러-뒤에 깔아주는 연한 회색*/
+  --back-color: #f5f5f5;
+  /*뒤로가기컬러*/
+  --cancel-color: #eb0000;
+}
 * {
   padding: 0;
   margin: 0;
@@ -5,13 +17,12 @@
 
 .rating_topic {
   font-weight: 800;
-  margin-bottom: 3%;
+  margin-bottom: 30px;
 }
 
 /** 타이틀 아래 버튼 디자인 부분 */
 
 .rating_btn {
-  margin-top: 3%;
   margin-bottom: 3%;
 }
 
@@ -47,144 +58,116 @@
 /** 본문 내용 */
 
 .ratingcontainer {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 /** 평가 등록하는 부분 */
 .ratingpart {
-  max-width: 700px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .ratingtitle {
   background-color: none;
   font-size: 18px;
-  padding: 15px;
+  padding-bottom: 10px;
   font-weight: bold;
-  border-bottom: 2px solid #293462;
+  border-bottom: 3px solid #293462;
   display: flex;
   justify-content: space-between;
 }
 
-.ratingname {
-  font-size: 17px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-weight: 600;
-}
-.nameinput {
-  margin: 0 auto;
-  font-style: bolder;
-  display: flex;
-  place-items: center;
-  width: 700px; /* 원하는 너비 */
-  height: 50px; /* 원하는 높이 */
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  border: none;
-  font-size: 15px;
-
-  padding-left: 10px;
-}
-.partcontainer {
-  margin-top: 3%;
-  margin-bottom: 1%;
-}
-.ratingsatis {
-  font-size: 17px;
-  padding-top: 15px;
-  font-weight: 600;
-  float: left;
-}
-.ratingcar {
-  font-size: 17px;
-  padding-top: 15px;
-  font-weight: 600;
-  margin-left: 23rem;
-}
-.inputcontainer {
-  float: left;
-}
-
-.satisinput {
-  font-style: bolder;
-  display: flex;
-  place-items: center;
-  width: 300px; /* 원하는 너비 */
-  height: 40px; /* 원하는 높이 */
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  border: none;
-  float: left;
-  font-size: 15px;
-}
-.carinput {
-  font-style: bolder;
-  display: flex;
-  place-items: center;
-  width: 300px; /* 원하는 너비 */
-  height: 40px; /* 원하는 높이 */
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  border: none;
-  margin-left: 23rem;
-  font-size: 15px;
-}
-.satisinput,
-.carinput {
-  padding-left: 10px;
-}
-.ratingitem {
-  font-size: 17px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-weight: 600;
-  margin-top: 3rem;
-}
-
-.iteminput {
-  margin: 0 auto;
-  display: flex;
-  place-items: center;
-  width: 700px; /* 원하는 너비 */
-  height: 150px; /* 원하는 높이 */
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  border: none;
-  size: 30;
-  font-size: 15px;
-  padding: 10px;
-  font-weight: 500;
-}
-
 /** 등록버튼 */
+.sendrating_wrap {
+  width: var(--content-width);
+  margin: auto;
+  margin-top: 30px;
+}
+.sendrating_back,
 .sendrating {
   margin: 0 auto;
-  width: 400px;
-  height: 40px;
-  background: #293462;
-  color: #f5f5f5;
-  font-size: 15px;
-  font-weight: 700;
-  border: none;
-  margin-left: 23%;
-  margin-top: 3rem;
+  float: right;
+  padding: 15px 50px;
+  border-radius: 10px;
+  font-size: 17px;
+  font-weight: bold;
+  transition: 0.3s;
   cursor: pointer;
-  border-radius: 5px;
-  transition: 0.2s;
+}
+.sendrating_back {
+  margin-right: 10px;
+  background-color: #fff;
+  border: 2px solid var(--main-color);
+}
+.sendrating {
+  background-color: var(--main-color);
+  border: 2px solid var(--main-color);
+  color: #fff;
+}
+.sendrating_back:hover {
+  background-color: var(--cancel-color);
+  border: 2px solid var(--cancel-color);
+}
+.sendrating:hover {
+  background: var(--sub-color);
+  border: 2px solid var(--sub-color);
+  color: #000;
 }
 
-.sendrating:hover {
-  margin: 0 auto;
-  width: 400px;
-  height: 40px;
-  background: #f7be16;
-  color: #293462;
-  font-size: 15px;
-  font-weight: 700;
-  border: none;
-  margin-left: 23%;
-  margin-top: 3rem;
-  transition: 0.2s;
+.ratingtitle_wrap {
+  width: 1200px;
+  display: inline-block;
+  margin-top: 20px;
+}
+.ratingtitle_wrap input,
+.ratingtitle_wrap select {
+  height: 50px;
+  border: 1px solid #dedfe0;
+  background-color: var(--back-color);
+  border-radius: 10px;
+  text-align: center;
+  font-size: 16px;
+}
+.ratingtitle_wrap p,
+.ratingcontent_wrap p {
+  font-size: 17px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.rating_auth {
+  display: inline-block;
+  width: 657px;
+  margin-right: 20px;
+}
+.rating_auth input {
+  width: 657px;
+}
+.rating_car {
+  display: inline-block;
+  width: 300px;
+  margin-right: 20px;
+}
+.rating_car select {
+  width: 300px;
+}
+.rating_satis {
+  display: inline-block;
+  width: 200px;
+}
+.rating_satis select {
+  width: 200px;
+}
+.ratingcontent_wrap {
+  margin-top: 20px;
+}
+.iteminput {
+  width: 1200px;
+  border: 1px solid #dedfe0;
+  background-color: var(--back-color);
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 20px;
+  height: 300px;
 }
