--- a/src/style/Customer_review_list.module.css
+++ b/src/style/Customer_review_list.module.css
@@ -1,3 +1,15 @@
+:root {
+  /*콘텐츠내용 width*/
+  --content-width: 1200px;
+  /*메인컬러*/
+  --main-color: #21325e;
+  /*보조컬러*/
+  --sub-color: #f7be16;
+  /*보조컬러-뒤에 깔아주는 연한 회색*/
+  --back-color: #f5f5f5;
+  /*뒤로가기컬러*/
+  --cancel-color: #eb0000;
+}
 * {
   padding: 0;
   margin: 0;
@@ -47,7 +59,7 @@
 /** 본문 내용 */
 
 .customratingcontainer {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -56,13 +68,20 @@
 .accordionContainer {
   /* margin-top: 4%; */
   width: 100%;
+  border: 1px solid #dedfe0;
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
 
 .accordionHeader {
-  padding: 15px;
+  padding: 20px 0px;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #dedfe0;
+  transition: 0.3s;
   /* border-top: 2px solid #293462;
   border-bottom: 1px solid #293462; */
 }
@@ -71,6 +90,10 @@
   background-color: #f5f5f5;
 } */
 
+.accordionHeader:hover {
+  background-color: #f5f5f5;
+}
+
 .open .accordionHeader {
   background-color: none;
 }
@@ -78,35 +101,54 @@
 /** 아코디언 내부 편집 */
 
 .content {
-  padding: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 20px;
 }
 
 .num {
-  padding-left: 3%;
+  width: 140px;
+  text-align: center;
   font-size: 15px;
   font-weight: 600;
 }
 .person {
-  margin-left: 40%;
+  position: absolute;
+  display: inline-block;
+  width: 250px;
+  text-align: center;
   font-size: 15px;
   font-weight: 400;
+  left: 73%;
 }
 
 .title {
-  margin-left: 0%;
+  position: absolute;
+  /* border: 1px solid #000; */
+  width: 600px;
+  text-align: center;
   font-size: 15px;
   font-weight: 400;
+  left: 21%;
 }
 
 .accordionItem {
   border-radius: 5px;
+  background: #fff;
 }
 
-.accordionItem:nth-child(odd),
+.accordionItem .content {
+  background-color: var(--back-color);
+}
+
+/* .accordionItem:nth-child(odd),
 .accordionItem:nth-child(odd) .content {
   background: #f5f5f5;
-}
+} */
 .triangle {
+  position: absolute;
+  /* border: 1px solid #000; */
+  left: 86%;
   transition: 0.2s;
 }
 .rotate {
@@ -125,7 +167,8 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  font-size: 15px;
+  font-size: 18px;
+  padding-top: 10px;
   font-weight: 400;
 }
 
@@ -158,6 +201,10 @@
 }
 
 .opencontent {
+  border: 1px solid #dedfe0;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
   display: flex;
   justify-content: left;
   margin-top: 2%;
@@ -181,7 +228,7 @@
   transition: background-color 0.3s ease; /* 배경색 전환 효과 */
   border: 0;
   font-weight: 900;
-  margin-left: 85%;
+  margin-left: 91%;
   margin-bottom: 1%;
   right: 0;
 }
@@ -194,49 +241,46 @@
   color: #293462;
   border: 0;
   font-weight: 900;
-  margin-left: 85%;
-  margin-bottom: 1%;
-  right: 0;
 }
 
 /** 페이지 하단 number 버튼 디자인 부분 */
+.btnrate_wrap {
+  width: var(--content-width);
+  margin: auto;
+  margin-top: 30px;
+}
 
-.btnrate {
+.btnrate_wrap .btnrate {
   display: inline-block;
-  width: 180px;
-  height: 40px;
-  padding: 10px 20px;
+  float: right;
+  padding: 15px 30px;
   border-radius: 10px; /* 반원 형태를 만들기 위해 큰 값 사용 */
-  background-color: #f5f5f5; /* 버튼 배경색 */
+  background-color: #fff; /* 버튼 배경색 */
   color: #293462; /* 텍스트 색상 */
-  text-align: center;
+  font-size: 16px;
   text-decoration: none;
   cursor: pointer;
-  font-size: 13px;
   border: 2px solid #293462;
   font-weight: 900;
-  margin-left: 78%;
-  right: 0;
-  margin-top: 3%;
-  margin-bottom: 2%;
-  transition: 0.2s;
+  transition: 0.3s;
+  margin-bottom: 30px;
 }
 
 .btnrate:hover {
   background-color: #293462; /* 마우스 호버 시 배경색 변경 */
   color: #f5f5f5;
-  border: 2px solid #ffffff;
-  transition: 0.2s;
+  border: 2px solid #293462;
 }
 
 .numlist {
-  display: flex;
-  margin: 0 auto;
-  font-size: 13px;
+  /* border: 1px solid #000; */
+  width: 1200px;
+  margin-top: 30px;
+  margin: auto;
+  clear: both;
+  font-size: 15px;
   font-weight: 500;
   text-align: center;
-  float: left;
-  margin-left: 40%;
 }
 
 .btnnum {
@@ -264,7 +308,7 @@
   color: black;
 }
 
-.explantext {
+/* .explantext {
   margin-top: 14%;
 }
 
@@ -285,4 +329,5 @@
   text-align: left;
   font-size: 15px;
   color: #c7c4c4;
-}
+} */
+
