--- a/src/style/Manager_notice_add.module.css
+++ b/src/style/Manager_notice_add.module.css
@@ -8,47 +8,47 @@
   /*보조컬러-뒤에 깔아주는 연한 회색*/
   --back-color: #f5f5f5;
   /*뒤로가기컬러*/
-  --cancel-color:#eb0000;
+  --cancel-color: #eb0000;
 }
 * {
   padding: 0;
   margin: 0;
 }
-.notice_add_wrap{
+.notice_add_wrap {
   /* border: 1px solid #000; */
   width: var(--content-width);
   margin: auto;
   margin-top: 30px;
 }
-.notice_add_wrap>p{
+.notice_add_wrap > p {
   /* border: 1px solid #000; */
   margin: auto;
   font-size: 20px;
   font-weight: bold;
 }
-.notice_add_wrap hr{
+.notice_add_wrap hr {
   border: none;
   background-color: var(--main-color);
   height: 3px;
   margin-top: 10px;
 }
 /*공지사항 수정*/
-.add_wrap{
+.add_wrap {
   /* border: 1px solid #000; */
   width: 1150px;
-  margin:auto;
+  margin: auto;
   margin-top: 30px;
 }
-.add_wrap form{
-  /* border: 1px solid crimson; */
+.add_wrap form input {
+  font-weight: 600;
 }
-.add_wrap p{
+.add_wrap p {
   font-size: 16px;
   font-weight: bold;
   padding-left: 5px;
 }
 .add_wrap input,
-.add_content textarea{
+.add_content textarea {
   background-color: var(--back-color);
   border: none;
   border-radius: 10px;
@@ -57,11 +57,11 @@
 }
 
 /*작성자, 중요표시*/
-.add_inner{
+.add_inner {
   /* border: 1px solid blue; */
   display: inline-block;
 }
-.add_auth{
+.add_auth {
   /* border: 1px solid #000; */
   display: inline-block;
   width: 900px;
@@ -70,47 +70,47 @@
 /*작성자, 중요표시, 제목 input*/
 .add_auth input,
 .add_import input,
-.add_title input{
+.add_title input {
   width: inherit;
   height: 40px;
 }
-.add_content textarea{
+.add_content textarea {
   width: 1150px;
   height: 300px;
   padding-top: 10px;
 }
-.add_import{
+.add_import {
   /* border: 1px solid #000; */
   display: inline-block;
   width: 220px;
 }
 
 /*제목, 내용*/
-.add_inner_02{
+.add_inner_02 {
   /* border: 1px solid green; */
 }
-.add_inner_02 input{
+.add_inner_02 input {
   display: inline-block;
   width: 1150px;
 }
 .add_title,
-.add_content{
+.add_content {
   margin-top: 15px;
 }
 
 /*버튼*/
-.add_button_wrap{
+.add_button_wrap {
   /* border: 1px solid #000; */
   width: 1150px;
   margin: auto;
   margin-top: 30px;
 }
-.add_button{
+.add_button {
   /* border: 1px solid #000; */
   float: right;
 }
 /*돌아가기 버튼*/
-.add_button_wrap button{
+.add_button_wrap button {
   border: 2px solid var(--main-color);
   background-color: #fff;
   color: #000;
@@ -121,13 +121,13 @@
   transition: 0.3s;
   cursor: pointer;
 }
-.add_button_wrap button:hover{
+.add_button_wrap button:hover {
   border: 2px solid var(--cancel-color);
   background-color: var(--cancel-color);
   color: #fff;
 }
 /*수정확인 버튼*/
-.add_button_wrap input[type=submit]{
+.add_button_wrap input[type="submit"] {
   border: 2px solid var(--main-color);
   background-color: var(--main-color);
   color: #fff;
@@ -139,8 +139,8 @@
   cursor: pointer;
   margin-left: 10px;
 }
-.add_button_wrap input[type=submit]:hover{
+.add_button_wrap input[type="submit"]:hover {
   border: 2px solid var(--sub-color);
   background-color: var(--sub-color);
-  color:#000;
+  color: #000;
 }
