--- a/src/style/About_us.module.css
+++ b/src/style/About_us.module.css
@@ -431,7 +431,7 @@
   width: 900px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-th {
+.table_fill th {
   color: #000;
   background: var(--sub-color);
   border-bottom: 3px solid var(--back-color);
@@ -444,17 +444,17 @@ th {
   cursor: pointer;
   transition: 0.3s;
 }
-th:hover {
+.table_fill th:hover {
   background: #ffd556;
 }
-th:first-child {
+.table_fill th:first-child {
   border-top-left-radius: 3px;
 }
-th:last-child {
+.table_fill th:last-child {
   border-top-right-radius: 3px;
   border-right: none;
 }
-tr {
+.table_fill tr {
   border-top: 1px solid #c1c3d1;
   border-bottom: 1px solid #c1c3d1;
   color: #666b85;
@@ -462,22 +462,22 @@ tr {
   font-weight: normal;
   text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
-tr:first-child {
+.table_fill tr:first-child {
   border-top: none;
 }
-tr:last-child {
+.table_fill tr:last-child {
   border-bottom: none;
 }
-tr:nth-child(odd) td {
+.table_fill tr:nth-child(odd) td {
   background: var(--back-color);
 }
-tr:last-child td:first-child {
+.table_fill tr:last-child td:first-child {
   border-bottom-left-radius: 3px;
 }
-tr:last-child td:last-child {
+.table_fill tr:last-child td:last-child {
   border-bottom-right-radius: 3px;
 }
-td {
+.table_fill td {
   background: #ffffff;
   padding: 30px 20px;
   text-align: center;
