style: [마이페이지, 공지사항, 고객센터] 헤더 간격 및 탭 메뉴 수정

--- a/src/style/Notice_main.module.css
+++ b/src/style/Notice_main.module.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+.notice{
+  margin-top: 50px;
+}
+
 .notice table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -13,7 +17,7 @@
 }
 
 .notice .pageTitle {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 .notice .pageTitle h3 {
   font-size: 28px;
