--- a/src/style/Customer_review_list.module.css
+++ b/src/style/Customer_review_list.module.css
@@ -76,6 +76,7 @@
 }
 
 .accordionHeader {
+  position: relative;
   padding: 20px 0px;
   cursor: pointer;
   display: flex;
@@ -107,6 +108,7 @@
 }
 
 .num {
+  /* border: 1px solid #000; */
   width: 140px;
   text-align: center;
   font-size: 15px;
@@ -115,21 +117,21 @@
 .person {
   position: absolute;
   display: inline-block;
-  width: 250px;
-  text-align: center;
+  width: 150px;
+  text-align: right;
   font-size: 15px;
   font-weight: 400;
-  left: 73%;
+  left: 80%;
 }
 
 .title {
-  position: absolute;
   /* border: 1px solid #000; */
-  width: 600px;
-  text-align: center;
+  position: absolute;
+  width: 1000px;
+  text-align: left;
   font-size: 15px;
   font-weight: 400;
-  left: 21%;
+  left: 11%;
 }
 
 .accordionItem {
@@ -148,7 +150,7 @@
 .triangle {
   position: absolute;
   /* border: 1px solid #000; */
-  left: 86%;
+  left: 96%;
   transition: 0.2s;
 }
 .rotate {
