--- a/src/style/Manager_review.module.css
+++ b/src/style/Manager_review.module.css
@@ -110,6 +110,7 @@
 }
 
 .accordionHeader {
+  position: relative;
   padding: 20px 0px;
   cursor: pointer;
   display: flex;
@@ -148,21 +149,21 @@
   /* border: 1px solid red; */
   position: absolute;
   display: inline-block;
-  width: 250px;
-  text-align: center;
+  width: 150px;
+  text-align: right;
   font-size: 15px;
   font-weight: 400;
-  left: 71%;
+  left: 77.5%;
 }
 
 .title {
-  position: absolute;
   /* border: 1px solid #000; */
-  width: 600px;
+  position: absolute;
+  width: 700px;
   text-align: center;
   font-size: 15px;
   font-weight: 400;
-  left:21%;
+  left:7.5%;
 }
 
 .accordionItem {
@@ -179,7 +180,7 @@
 .triangle {
   position: absolute;
   /* border: 1px solid #000; */
-  left: 86%;
+  left: 96%;
   transition: 0.2s;
 }
 .rotate {
